--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -72,8 +72,8 @@
                 <p class="copyright text-muted">
                     Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}
                     <br>
-                    Theme by <a href="http://huangxuan.me">Hux</a> | 
-					Blog writed by <a href="https://github.io/snowball2dev">snowball</a>.
+                    Theme by <a href="http://huangxuan.me">Hux</a>. | 
+					Blog writed by <a href="https://github.io/snowball2dev">Snowball</a>.
                     <!-- |
                     <iframe
                         style="margin-left: 2px; margin-bottom:-5px;"
